# torch-sandbox

./: README.md  debug.ipynb  pyproject.toml
study-anomaly_transformer/: anomaly_transormer_handson.ipynb  note.md  paper_translate.md
study-anomaly_transformer/model/: attn.py  embed.py
study-anomaly_transformer/scripts/: SMAP.sh
study-tranad/: check_001.ipynb  implement_TranAD.ipynb  note.md  torch_nn_TransformerDecoderLayer.py  torch_nn_TransformerEncoderLayer.py
